# pythonidiomsrefactor

./: .gitignore  PKG-INFO  README.md  main.py  pyproject.toml  result.json  ridiom.toml
RefactoringIdioms/: CodeInfo.py  __init__.py  __main__.py  file.py  main.py  test_file.py  util.py
RefactoringIdioms/extract_complicate_code/: extract_chain_compare.py  extract_compli_truth_value_test_code.py
RefactoringIdioms/extract_complicate_code_new/: extract_chain_compare.py
RefactoringIdioms/extract_simp_cmpl_data/: ast_util.py  extract_compli_truth_value_test_code.py
RefactoringIdioms/extract_transform_complicate_code_new/: count_compl_count.py  extract_compli_multiple_assign_code_improve_complete_improve.py  extract_compli_truth_value_test_code_remove_is_isnot.py  extract_compli_var_unpack_for_target_improve.py  extract_compli_var_unpack_star_call_improve.py  extract_compli_var_unpack_star_call_improve_fix_negtive.py  extract_compli_var_unpack_star_call_improve_strict.py  extract_for_else.py  extract_for_multiple_target.py  extract_multiple_assign.py  extract_multiple_target.py  extract_star_call.py  extract_truth_value.py  transform_chained_comparison_compli_to_simple.py  transform_for_else_compli_to_simple_improve.py  transform_for_else_compli_to_simple_improve_copy.py  transform_for_else_compli_to_simple_improve_copy_result_csv.py  transform_for_else_compli_to_simple_improve_copy_result_csv_test_bugd.py  transform_for_else_compli_to_simple_improve_copy_sample.py
RefactoringIdioms/transform_c_s/: transform_assign_multi_compli_to_simple.py  transform_comprehension_compli_to_simple.py  transform_comprehension_dict_compli_to_simple.py  transform_comprehension_set_compli_to_simple.py  transform_for_else_compli_to_simple_improve.py  transform_for_multiple_target.py  transform_list_comp.py  transform_set_comp.py  transform_truth_value_test_compli_to_simple.py  transform_var_unpack_call_compli_to_simple.py
code/: complicated_code_util.py  github_util.py  util.py
code/crawl_repos_python/: crawl_repo_by_star.py  crawl_repo_info.py  extract_python3_repo.py  shallow_clone_repo.py
code/extract_complicate_code/: count_compl_count.py  count_compl_count_box_plot_code.py  count_compl_count_box_plot_type.py  count_compl_count_box_plot_type_pythonic.py  extract_compli_multiple_assign.py  extract_compli_truth_value_test.py  extract_compli_var_unpack_for_target_improve.py  extract_compli_var_unpack_star_call_improve.py  transform_chained_comparison_compli_to_simple.py  transform_for_else_compli_to_simple_improve_copy_result_csv.py
code/extract_idiom_code/: extrac_idiom_assign_multiple.py  extrac_idiom_chained_comparison.py  extrac_idiom_for_dict_comprehension.py  extrac_idiom_for_list_comprehension.py  extrac_idiom_for_set_comprehension.py  extrac_idiom_truth_value_test.py  extrac_idiom_truth_value_test_remove_is.py  extrac_idiom_truth_value_test_remove_is_improve.py  extrac_idiom_var_unpack_call.py  extrac_idiom_var_unpack_for_target.py  extract_idiom_for_else.py
code/extract_simp_cmpl_data/: extract_compli_truth_value_test_code.py
code/motivation/: challenges of writing pythonic code StackOverflow .csv
code/statistic_data/: count_complicated_code_generality_ratio.py  count_repos_with_test_case.py  statistic_repo_file_me_code_count.py
code/test_case/: configure_pro_envir_util.py  configure_pro_envir_util_salt_own_config.py  confiure_pro_envior.py  confiure_pro_envior_by_requirements.py  confiure_pro_envior_by_requirements_chain_comparison.py  confiure_pro_envior_by_requirements_dict_compre.py  confiure_pro_envior_by_requirements_dict_compre_own_config.py  confiure_pro_envior_by_requirements_for_else.py  confiure_pro_envior_by_requirements_for_else_improve.py  (+46 more)
evaluation_data/: code_review_total_code_900.csv  pull request 90.csv
ridiom_core/: __init__.py  ast_helpers.py  base_rule.py  code_info.py  config.py  registry.py  utils.py
(+101 files in other folders)
