[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name        = "RefactoringIdioms"
license     = {text = "MIT License"}
description = "code refactorings with Python idioms"
readme      = "README.md"
# version     = "0.0.1"
# version     = "0.0.2"
# version     = "0.0.3"
# version     = "0.0.4"
# version     = "0.0.5"
# version     = "0.0.6"
# version     = "0.0.7"
# version     = "0.0.8"
version     = "0.0.1"




# authors     = [
#     {name = "Python Code Quality Authority", email = "code-quality@python.org"}
# ]
# keywords    = ["static code analysis", "linter", "python", "lint"]
# classifiers = [
#     "Development Status :: 6 - Mature",
#     "Environment :: Console",
#     "Intended Audience :: Developers",
#     "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
#     "Operating System :: OS Independent",
#     "Programming Language :: Python",
#     "Programming Language :: Python :: 3",
#     "Programming Language :: Python :: 3 :: Only",
#     "Programming Language :: Python :: 3.7",
#     "Programming Language :: Python :: 3.8",
#     "Programming Language :: Python :: 3.9",
#     "Programming Language :: Python :: 3.10",
#     "Programming Language :: Python :: Implementation :: CPython",
#     "Programming Language :: Python :: Implementation :: PyPy",
#     "Topic :: Software Development :: Debuggers",
#     "Topic :: Software Development :: Quality Assurance",
#     "Topic :: Software Development :: Testing",
# ]
requires-python = ">=3.7"
dependencies    = [
"astroid==2.9.3",
"cffi==1.15.0",
"click==8.0.3",
"cryptography==36.0.2",
"cycler==0.11.0",
"dill==0.3.4",
"flake8==4.0.1",
"Flask==2.0.2",
"fonttools==4.29.1",
"gunicorn==20.1.0",
"guppy3==3.1.2",
"isort==5.10.1",
"itsdangerous==2.0.1",
"Jinja2==3.0.3",
"joblib==1.1.0",
"kiwisolver==1.3.2",
"lazy-object-proxy==1.7.1",
"MarkupSafe==2.0.1",
"matplotlib==3.5.1",
"mccabe==0.6.1",
"memory-profiler==0.60.0",
"mpmath==1.2.1",
"multiprocess==0.70.12.2",
"numpy==1.22.2",
"opt-einsum==3.3.0",
"packaging==21.3",
"pandas==1.4.2",
"pathos==0.2.8",
"Pillow==9.0.1",
"platformdirs==2.5.0",
"pox==0.3.0",
"ppft==1.6.6.4",
"psutil==5.9.0",
"pycodestyle==2.8.0",
"pycparser==2.21",
"pyflakes==2.4.0",
"pylibmc==1.6.1",
"pyparsing==3.0.7",
"pyperf==2.3.1",
"pyro-api==0.1.2",
"python-dateutil==2.8.2",
"python-dotenv==0.19.2",
"pytz==2022.1",
"PyYAML==6.0",
"resolvelib==0.5.4",
"scikit-learn==1.0.2",
"scipy==1.8.0",
"six==1.16.0",
"sklearn==0.0",
"sympy==1.9",
"threadpoolctl==3.1.0",
"toml==0.10.2",
"torch==1.10.2",
"tqdm==4.63.0",
"typing_extensions==4.1.1",
"Werkzeug==2.0.2",
"wrapt==1.12.1"
]
# dynamic = ["version"]

# [project.optional-dependencies]
# testutils = ["gitpython>3"]
# spelling = ["pyenchant~=3.2"]

[project.urls]
# "Docs: User Guide"  = "https://pylint.pycqa.org/en/latest/"
# "Source Code"       = "https://github.com/PyCQA/pylint"
"homepage"          = "https://github.com/idiomaticrefactoring/pythonidiomsrefactor"
# "What's New"        = "https://pylint.pycqa.org/en/latest/whatsnew/2/"
# "Bug Tracker"       = "https://github.com/PyCQA/pylint/issues"
# "Discord Server"    = "https://discord.com/invite/Egy6P8AMB5"
# "Docs: Contributor Guide" = "https://pylint.pycqa.org/en/latest/development_guide/contributor_guide/index.html"

[project.scripts]
RIdiom        = "RefactoringIdioms:run_main"

[options]
# packages = find:
# packages= ['transform_c_s', 'extract_simp_cmpl_data', 'extract_transform_complicate_code_new']

[tool.setuptools]
license-files = ["LICENSE"]  # Keep in sync with setup.cfg

# [tool.setuptools.packages.find]

# include = ["pylint*"]

# [tool.setuptools.package-data]
# pylint = ["testutils/testing_pylintrc"]
#
# [tool.setuptools.dynamic]
# version = {attr = "pylint.__pkginfo__.__version__"}